--- a/cargo-projects/bookreview/Cargo.toml
+++ b/cargo-projects/bookreview/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
+serde_json = "1.0"
