--- a/cargo-projects/bookreview/Cargo.toml
+++ b/cargo-projects/bookreview/Cargo.toml
@@ -10,3 +10,9 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
+
+[dependencies.uuid]
+version = "1.2.1"
+features = [
+    "v4",                # Lets you generate random UUIDs
+]
