--- a/cargo-projects/bookreview/Cargo.toml
+++ b/cargo-projects/bookreview/Cargo.toml
@@ -5,6 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "bookreview"
+
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
@@ -13,6 +20,7 @@ serde_json = "1.0"
 
 [dependencies.uuid]
 version = "1.2.1"
-features = [
-    "v4",                # Lets you generate random UUIDs
-]
+features = ["v4"]
+
+[dev-dependencies]
+reqwest = "0.11"
