--- a/cargo-projects/bookreview/Cargo.toml
+++ b/cargo-projects/bookreview/Cargo.toml
@@ -22,5 +22,17 @@ serde_json = "1.0"
 version = "1.2.1"
 features = ["v4"]
 
+[dependencies.sqlx]
+version = "0.6.2"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
+
 [dev-dependencies]
 reqwest = "0.11"
