--- a/cargo-projects/bookreview/Cargo.toml
+++ b/cargo-projects/bookreview/Cargo.toml
@@ -8,6 +8,7 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
+config = "0.13.2"
 
 [dependencies.uuid]
 version = "1.2.1"
