--- a/cargo-projects/vivs/Cargo.toml
+++ b/cargo-projects/vivs/Cargo.toml
@@ -8,7 +8,7 @@ name = "vivs"
 path = "src/main.rs"
 
 [[bin]]
-name = "vivs-client"
+name = "vivs-repl"
 path = "src/client/repl.rs"
 
 [dependencies]
