--- a/cargo-projects/vivs/Cargo.toml
+++ b/cargo-projects/vivs/Cargo.toml
@@ -15,3 +15,5 @@ path = "src/client/repl.rs"
 tokio = { version = "1", features = ["full"] }
 bytes = "1.5.0"
 atoi = "2.0.0"
+log = "0.4"
+env_logger = "0.9.0"
