--- a/cargo-projects/vivs/Cargo.toml
+++ b/cargo-projects/vivs/Cargo.toml
@@ -17,3 +17,5 @@ bytes = "1.5.0"
 atoi = "2.0.0"
 log = "0.4"
 env_logger = "0.9.0"
+toml = "0.8.19"
+serde = { version = "1.0.209", features = ["derive"] }
