--- a/cargo-projects/vivs/Cargo.toml
+++ b/cargo-projects/vivs/Cargo.toml
@@ -19,3 +19,4 @@ log = "0.4"
 env_logger = "0.9.0"
 toml = "0.8.19"
 serde = { version = "1.0.209", features = ["derive"] }
+clap = { version = "1.74.0", features = ["derive"] }
