--- a/cargo-projects/vivs/Cargo.toml
+++ b/cargo-projects/vivs/Cargo.toml
@@ -20,3 +20,4 @@ env_logger = "0.9.0"
 toml = "0.8.19"
 serde = { version = "1.0.209", features = ["derive"] }
 clap = { version = "4.5.17", features = ["derive"] }
+crc = "3.2.1"
