feat(rate-limiter): remove test dependency on features

--- a/cargo-projects/rate-limiter/Cargo.toml
+++ b/cargo-projects/rate-limiter/Cargo.toml
@@ -3,9 +3,5 @@ name = "rate-limiter"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
-mock_instant = { version = "0.5.3", optional = true }
-
-[features]
-# this is to mock std::time features
-mock-instant = ["dep:mock_instant"]
+[dev-dependencies]
+mock_instant = { version = "0.5.3" }
