--- a/cargo-projects/asyncing/Cargo.toml
+++ b/cargo-projects/asyncing/Cargo.toml
@@ -11,3 +11,6 @@ reqwest = { version = "0.12.14", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 thiserror = "2.0.12"
 tokio = { version = "1.44.0", features = ["full"] }
+tower-http = { version = "0.6.2", features = ["trace"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
